# Defuseler

./: Cargo.toml  README.md  build.rs
src/: bomb_modules.rs  lib.rs  logic.rs  main.rs  types.rs
src/bomb_modules/: button.rs
ui/: App.slint  Menu.slint
ui/Components/: ButtonGrid.slint
ui/Modules/: BaseModule.slint
ui/Modules/Casual/: Binary.slint  Button.slint  ColorCode.slint  Hexadecimal.slint  Keypad.slint  Mathematics.slint  Morse.slint  MultiButtons.slint  Tiles.slint  Timing.slint  Wires.slint  index.slint
