[package]
name = "defuseler"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.14.1", default-features = false, features = ["std", "renderer-skia", "backend-default", "compat-1-2", "backend-android-activity-06"] }

[build-dependencies]
slint-build = "1.14.1"
